--- a/styles/style.css
+++ b/styles/style.css
@@ -70,7 +70,7 @@
     background-color:#F5F5DC;
     height: 125px;
     width: 100%;
-    margin bottom: 5px;
+    margin-bottom: 5px;
 }
 
 .bas4{
